fix z-index

--- a/apps/dt_web/webapp/src/app/app.component.css
+++ b/apps/dt_web/webapp/src/app/app.component.css
@@ -70,6 +70,7 @@ body {
 .topbar-right {
   text-align: right;
   padding: 20px !important;
+  z-index: -9999;
 }
 
 .dt-topbar-icons {
